Added task 2 impl, fixed task 1 impl and moved the csv to the resources folder